fix errors not showing bug

--- a/src/app/auth/signup/user-register/register-form/register-form.component.css
+++ b/src/app/auth/signup/user-register/register-form/register-form.component.css
@@ -1,6 +1,6 @@
-.form-validation-text {
+/* .form-validation-text {
   display: block;
 }
 .is-invalid > .form-validation-text {
   display: none;
-}
+} */
